log/build_2022-03-10_22-40-18/py_package/stdout_stderr.log
running egg_info
writing ../../build/py_package/py_package.egg-info/PKG-INFO
writing dependency_links to ../../build/py_package/py_package.egg-info/dependency_links.txt
writing entry points to ../../build/py_package/py_package.egg-info/entry_points.txt
writing requirements to ../../build/py_package/py_package.egg-info/requires.txt
writing top-level names to ../../build/py_package/py_package.egg-info/top_level.txt
reading manifest file '../../build/py_package/py_package.egg-info/SOURCES.txt'
writing manifest file '../../build/py_package/py_package.egg-info/SOURCES.txt'
running build
running build_py
copying py_package/controller.py -> /home/ghani/my_ws/build/py_package/build/lib/py_package
running install
running install_lib
copying /home/ghani/my_ws/build/py_package/build/lib/py_package/controller.py -> /home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package
byte-compiling /home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package/controller.py to controller.cpython-38.pyc
  File "/home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package/controller.py", line 30
    def main(args=None):
    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/py_package/py_package.egg-info to /home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package-0.0.0-py3.8.egg-info
running install_scripts
Installing LISTNER script to /home/ghani/my_ws/install/py_package/lib/py_package
Installing controller script to /home/ghani/my_ws/install/py_package/lib/py_package
Installing talker script to /home/ghani/my_ws/install/py_package/lib/py_package
writing list of installed files to '/home/ghani/my_ws/build/py_package/install.log'
